RESOLVED FIXED36214
WebCore/bridge uses bzero, which is not available on Android without extra includes
https://bugs.webkit.org/show_bug.cgi?id=36214
Summary WebCore/bridge uses bzero, which is not available on Android without extra in...
Steve Block
Reported 2010-03-17 04:36:32 PDT
WebCore/bridge uses bzero. Android's stdlib.h will soon be modified to not include strings.h, in order to reduce pollution of the standard C namespace. Without strings.h being included from stdlib.h, use of bzero would require additional local includes on Android. Rather than add includes, we should replace calls to bzero with memset, as this is what is used throughout WebCore common code.
Attachments
Patch (6.48 KB, patch)
2010-03-17 04:40 PDT, Steve Block
jorlow: review+
Steve Block
Comment 1 2010-03-17 04:40:46 PDT
Jeremy Orlow
Comment 2 2010-03-17 04:50:31 PDT
Comment on attachment 50893 [details] Patch Looks like a no-op and consistency is good. r=me
Steve Block
Comment 3 2010-03-17 05:12:22 PDT
Note You need to log in before you can comment on or make changes to this bug.