2010-03-17  Steve Block  <steveblock@google.com>

Reviewed by Jeremy Orlow.

        Replace instances of bzero in WebCore/bridge common code with memset
        https://bugs.webkit.org/show_bug.cgi?id=36214

        Syntax change only, no new tests.

        * bridge/jni/JNIUtility.cpp:
        (JSC::Bindings::getJNIField):
        * bridge/jni/jsc/JNIBridgeJSC.cpp:
        (JavaField::dispatchValueFromInstance):
        * bridge/jni/jsc/JNIUtilityPrivate.cpp:
        (JSC::Bindings::convertValueToJValue):
        * bridge/jni/v8/JNIUtilityPrivate.cpp:
        (JSC::Bindings::convertNPVariantToJValue):
        * bridge/jni/v8/JavaNPObjectV8.cpp:
        (JSC::Bindings::AllocJavaNPObject):


Canonical link: https://commits.webkit.org/47399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56105 268f45cc-cd09-0410-ab3c-d52691b4dbfc