WebCore/bridge/jni/JNIUtility.cpp
@@ -283,7 +283,7 @@ jvalue getJNIField(jobject obj, JNIType type, const char* name, const char* sign
     JNIEnv* env = getJNIEnv();
     jvalue result;
 
-    bzero(&result, sizeof(jvalue));
+    memset(&result, 0, sizeof(jvalue));
     if (obj && jvm && env) {
         jclass cls = env->GetObjectClass(obj);
         if (cls) {
